codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__account_pools__tests__pools_empty.snap
---
source: tui/src/history_cell/account_pools_tests.rs
expression: "render(&AccountPoolReport::pools(&response), 90)"
---
Pools (0)

Default for new sessions: current login

No pools configured. Create one with /pools create NAME ALIAS...
